style: fix image size with CSS and prevent cropping on load

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,27 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.main-card {
+  margin: 0 auto;
+}
+
+.main-card img {
+  width: 400px;
+  height: 400px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+li img {
+  width: 150px;
+  height: 150px;
+  border-radius: 8px;
+  object-fit: cover;
 }
